<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bare_backround">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cartooncomicd996"
            android:textSize="25sp"
            android:textColor="#FF0000"
            android:gravity="center"
            android:text="@string/oppgaveTittel"/>

        <TextView
            android:id="@+id/oppgave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cartooncomicd996"
            android:textSize="40sp"
            android:textColor="#0000FF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/input_svar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cartooncomicd996"
            android:textSize="35sp"
            android:textColor="#006800"
            android:gravity="center"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cartooncomicd996"
            android:text="@string/feil"
            android:gravity="center"
            android:visibility="invisible"
            android:textSize="16sp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:elevation="10dp" />

        <!--
        <ImageView
            android:id="@+id/red_circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            android:background="@drawable/red_circle"
            android:layout_gravity="center"/>
            -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/input1"
                    android:src="@drawable/ikon_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input2"
                    android:src="@drawable/ikon_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input3"
                    android:src="@drawable/ikon_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/input4"
                    android:src="@drawable/ikon_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input5"
                    android:src="@drawable/ikon_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input6"
                    android:src="@drawable/ikon_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/input7"
                    android:src="@drawable/ikon_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input8"
                    android:src="@drawable/ikon_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/input9"
                    android:src="@drawable/ikon_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/input0"
                    android:src="@drawable/knapp_0gj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cartooncomicd996"
                    android:backgroundTint="#FF0000"
                    android:text="@string/angre"
                    />

                <Button
                    android:id="@+id/inputOK"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/cartooncomicd996"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#32AC37"
                    android:text="@string/send"
                    />


            </LinearLayout>

            <TextView
                android:id="@+id/correct_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="#4CAF50"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/cartooncomicd996"
                android:text="@string/riktig"
                android:gravity="center"
                android:visibility="invisible"
                android:textSize="16sp"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"
                android:elevation="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>